--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 
-body {
+html {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
